--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer footer-horizontal footer-center bg-black text-base-content rounded p-10 mt-10">
+<footer class="footer footer-horizontal footer-center bg-footer text-base-content rounded p-10 mt-10">
     <h1 class="text-4xl font-bold text-white text-center">WebHwa</h1>
 
     <div class="w-full border-b-1 border-white px-4"></div>
