--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 @plugin "daisyui";
+
+.font-Kanit {
+    font-family: 'Kanit', 'Lato', 'Mitr', 'Roboto', sans-serif;
+  }
+  .bg-navbar{
+    background-color: #E0F2F1;
+  }
+  .bg-footer{
+    background-color: black   ;
+  }
