--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-navbar shadow-sm p-10 ">
+<div class="navbar bg-navbar shadow-sm p-10 drop-shadow-lg sticky top-0 z-1">
     <div class="navbar-start">
       <div class="dropdown">
         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -43,6 +43,6 @@
       </ul>
     </div>
     <div class="navbar-end font-Kanit">
-      <a class="btn btn-success" href="#">เข้าสู่ระบบ</a>
+      <a class="btn btn-success"href="#">เข้าสู่ระบบ</a>
     </div>
   </div>
