--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,32 +1,32 @@
+<div class="flex flex-col items-center justify-center">
 
-<div class="flex flex-col items-center justify-center min-h-screen ">
-    
     <!-- กล่องหลัก -->
-    <div class="w-full h-80 max-w-9/10 bg-black text-white p-4 rounded-lg ">
-        <button class="bg-red-500 text-white font-bold py-2 px-4 rounded" disabled>
-            ยังไม่จบ
-          </button>
-        <h2 class="text-xl font-bold mt-2">เรื่อง <span class="font-normal">ตำนานการเกิดใหม่ในลัทธิมาร</span></h2>
-        <h3 class="text-lg font-bold mt-1">ผู้แต่ง <span class="font-normal">________</span></h3>
-    </div>
+    <div class="w-full h-80 max-w-9/10 bg-black text-white p-5 rounded-lg">
+            <button class="bg-red-500 text-white font-bold py-2 px-4 rounded font-Kanit mb-3 text-lg" disabled>
+                ยังไม่จบ
+            </button>
+            <h2 class="text-2xl font-bold mt-2 font-Kanit">เรื่อง <span class="font-Kanit">Chronicles of the Demon
+                    Faction ตำนานการเกิดใหม่ในลัทธิมาร</span></h2>
+            <h3 class="text-xl font-bold mt-2 font-Kanit">ผู้แต่ง <span class="font-Kanit">FORCE STUDIO,codezero </span>
+            </h3>
+        </div>
 
-    <!-- กล่องเรื่องย่อ -->
-    <div class="w-full h-50 max-w-9/10 bg-black text-white p-4 rounded-lg mt-4">
-        <h2 class="text-lg font-bold">เรื่องย่อ</h2>
-        <p class="line-clamp-3 overflow-hidden">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi id eos cumque quaerat veniam error
-            voluptas recusandae optio. Asperiores iure laudantium quisquam provident eum libero cumque aperiam obcaecati
-            expedita adipisci.
-        </p>
-    </div>
+        <!-- กล่องเรื่องย่อ -->
+        <div class="w-full h-50 max-w-9/10 bg-black text-white p-4 rounded-lg mt-4">
+            <h2 class="text-2xl font-bold mt-2 font-Kanit">เรื่องย่อ </h2>
+            <p class="line-clamp-3 overflow-hidden font-Kanit text-xl mt-2">
+                ชอนฮาจิน นักฆ่าที่มีชื่อเสียงโดดเด่นด้านวรยุทธ์ ได้หลบหนีเพื่อค้นหาอิสรภาพที่เขาปรารถนา
+                แต่ก่อนที่จะได้สัมผัสอิสรภาพ เขากลับเสียชีวิตลง เมื่อเขาลืมตาตื่นขึ้นอีกครั้ง
+                พบว่าตัวเองได้กลับชาติมาเกิดใหม่ในฐานะศัตรูของยุทธภพ คุณชายสามแห่งลัทธิมาร
+            </p>
+        </div>
 
-    <!-- กล่องหมวดหมู่ -->
-    <div class="w-full h-30 max-w-9/10 bg-black text-white p-4 rounded-lg mt-4">
-        <h2 class="text-lg font-bold">หมวดหมู่</h2>
-        <div class="flex gap-2 mt-2">
-            <button class="bg-gray-500 hover:bg-gray-700 font-bold py-2 px-4 rounded">โรแมนซ์</button>
-            <button class="bg-gray-500 hover:bg-gray-700 font-bold py-2 px-4 rounded">แฟนตาซี</button>
-            <button class="bg-gray-500 hover:bg-gray-700 font-bold py-2 px-4 rounded">ดราม่า</button>
+        <!-- กล่องหมวดหมู่ -->
+        <div class="w-full h-35 max-w-9/10 bg-black text-white p-4 rounded-lg mt-4">
+            <h2 class="text-2xl font-bold mt-2">หมวดหมู่</h2>
+            <div class="flex gap-2 mt-3">
+                <button class="bg-gray-500 hover:bg-gray-700 py-2 px-4 rounded font-Kanit text-lg">แอคชัน</button>
+                <button class="bg-gray-500 hover:bg-gray-700 py-2 px-4 rounded font-Kanit text-lg">แฟนตาซี</button>
+            </div>
         </div>
     </div>
-</div>
