--- a/src/app/reading_page/reading-page.component.html
+++ b/src/app/reading_page/reading-page.component.html
@@ -83,7 +83,7 @@
   <!-- กล่องพิมพ์คอมเมนต์ -->
   <div class="flex">
     <input type="text" placeholder="พิมพ์คอมเมนต์..."
-      class="flex-1 border border-r-0 p-2 rounded-l focus:outline-none focus:ring-1 focus:ring-green-400">
+      class="flex-1 border border-r-0 p-2 rounded-l focus:outline-none focus:ring-1 focus:ring-blue-400">
     <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-r shadow">
       ส่ง
     </button>
