--- a/src/app/episodes/episodes.component.html
+++ b/src/app/episodes/episodes.component.html
@@ -1,7 +1,7 @@
 
 <!-- ปุ่ม -->
 <div class="flex justify-center ">
-    <button
+    <button routerLink="/reading" 
         class="bg-black hover:opacity-25 text-white text-center font-bold py-2 px-4 rounded-sm border-black w-full max-w-9/10">
         อ่านตอนแรก
     </button>
